# rusby-wallet

./: .gitignore  AUDIT.md  AUDIT_REPORT_v0.7.0.md  CHANGELOG.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  Trunk.toml  build-extension.sh
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: backup.rs  bip32_utils.rs  bip39_utils.rs  caip.rs  crypto.rs  lib.rs  nft.rs  qr.rs  swap.rs  wallet.rs
crates/wallet-core/src/chains/: bitcoin.rs  cosmos.rs  dogecoin.rs  evm.rs  litecoin.rs  mod.rs  ripple.rs  solana.rs  stellar.rs  ton.rs  tron.rs
crates/wallet-core/src/security/: mod.rs  phishing.rs  scam_addresses.rs
crates/wallet-core/src/signing/: eip712.rs  mod.rs  personal_sign.rs
crates/wallet-core/src/tokens/: cw20.rs  erc20.rs  jetton.rs  mod.rs  spl.rs
crates/wallet-core/src/tx/: bitcoin.rs  cosmos.rs  dogecoin.rs  evm.rs  litecoin.rs  mod.rs  ripple.rs  solana.rs  stellar.rs  ton.rs  tron.rs
crates/wallet-ui/: Cargo.toml  index.html  style.css
crates/wallet-ui/src/: app.rs  logging.rs  main.rs  state.rs
crates/wallet-ui/src/components/: address_display.rs  chain_selector.rs  chain_sidebar.rs  confirmation_modal.rs  error_boundary.rs  mod.rs  navbar.rs  security_warning.rs  sidebar.rs  toast.rs  top_nav.rs
crates/wallet-ui/src/i18n/: de.rs  en.rs  es.rs  fr.rs  it.rs  ja.rs  ko.rs  mod.rs  pt.rs  zh.rs
crates/wallet-ui/src/pages/: address_book.rs  approvals.rs  approve.rs  dashboard.rs  history.rs  login.rs  mod.rs  nft.rs  onboarding.rs  receive.rs  send.rs  swap.rs  walletconnect.rs  wc_proposal.rs
crates/wallet-ui/src/rpc/: approvals.rs  bitcoin.rs  cosmos.rs  cw20.rs  dogecoin.rs  erc20.rs  evm.rs  history.rs  jetton.rs  litecoin.rs  mod.rs  nft.rs  prices.rs  ripple.rs  simulate.rs  solana.rs  spl.rs  stellar.rs  swap.rs  ton.rs  tron.rs
crates/wallet-ui/src/theme/: atelier.rs  default.rs  forest.rs  light.rs  midnight.rs  mod.rs  ocean.rs  professional.rs
crates/wallet-ui/src/tx_send/: bitcoin.rs  cosmos.rs  dogecoin.rs  evm.rs  litecoin.rs  mod.rs  ripple.rs  solana.rs  stellar.rs  ton.rs  tron.rs
extension/: background.js  content-script.js  inpage.js  manifest.json  wc-bundle.js
walletconnect/: esbuild.config.mjs  package-lock.json  package.json
walletconnect/src/: wc-bridge.js
